--- a/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
@@ -18,30 +18,30 @@
         </Grid>
     </Shell.TitleView>
     <ContentPage.Content>
-        
-            <Grid BackgroundColor="White">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="8*"/>
-                    <ColumnDefinition Width="*"/>
 
-                </Grid.ColumnDefinitions>
+        <Grid BackgroundColor="White">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="8*"/>
+                <ColumnDefinition Width="*"/>
 
-                <StackLayout Grid.Row="1" Grid.Column="1" Orientation="Vertical" >
+            </Grid.ColumnDefinitions>
 
-                    <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText1}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Title"/>
-                    <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText2}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header"/>
+            <StackLayout Grid.Row="1" Grid.Column="1" Orientation="Vertical" >
 
-                </StackLayout>
-                <Frame Grid.Row="2" Grid.Column="1" BackgroundColor="White" VerticalOptions="Start"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" >
+                <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText1}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Title"/>
+                <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText2}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header"/>
+
+            </StackLayout>
+            <!--<Frame Grid.Row="2" Grid.Column="1" BackgroundColor="White" VerticalOptions="Start"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" >
 
                     <StackLayout Orientation="Horizontal">
                         <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5" BackgroundColor="White" >
@@ -58,10 +58,21 @@
 
                         </Entry>
                     </StackLayout>
-                </Frame>
-                <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" TextColor="{extensions:AppMode Color=Text}" />
-                <Button Grid.Row="4" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ResetPassword}" x:Name="btnReset" Clicked="Reset_password_Tapped"  BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"  />
-            </Grid>
-        
+                </Frame>-->
+
+            <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.EmailLabel}" ></Label>
+            <extensions:EntryEx PlaceholderColor="LightGray" BorderColor="LightGray" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" BackgroundColor="White"  TextColor="Black"  >
+                <Entry.Behaviors>
+                    <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
+                        <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
+                        <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
+                    </xct:MultiValidationBehavior>
+                </Entry.Behaviors>
+
+            </extensions:EntryEx>
+            <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" TextColor="{extensions:AppMode Color=Text}" />
+            <Button Grid.Row="4" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ResetPassword}" x:Name="btnReset" Clicked="Reset_password_Tapped"  BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"  />
+        </Grid>
+
     </ContentPage.Content>
 </ContentPage>
