--- a/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
@@ -59,7 +59,7 @@
                         </Entry>
                     </StackLayout>
                 </Frame>-->
-
+            <StackLayout Grid.Row="2" Grid.Column="1" BackgroundColor="White" VerticalOptions="Start"  Padding="0" HorizontalOptions="FillAndExpand"  >
             <Label TextColor="#0D6EFD"  Text="{x:Static resources:Properties.Resources.EmailLabel}" ></Label>
             <extensions:EntryEx PlaceholderColor="LightGray" BorderColor="LightGray" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" BackgroundColor="White"  TextColor="Black"  >
                 <Entry.Behaviors>
@@ -68,8 +68,8 @@
                         <xct:TextValidationBehavior x:Name="EmailTextLenghtValidator" MinimumLength="1"/>
                     </xct:MultiValidationBehavior>
                 </Entry.Behaviors>
-
             </extensions:EntryEx>
+            </StackLayout>
             <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" TextColor="{extensions:AppMode Color=Text}" />
             <Button Grid.Row="4" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ResetPassword}" x:Name="btnReset" Clicked="Reset_password_Tapped"  BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"  />
         </Grid>
