Working on Municiplity Stats screen

--- a/DestoPesto/DestoPesto/Views/MainPage.xaml
+++ b/DestoPesto/DestoPesto/Views/MainPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:extensions="clr-namespace:DestoPesto.Extensions"
+                          xmlns:resources="clr-namespace:DestoPesto"
              x:Class="DestoPesto.Views.MainPage">
 
     <Shell.TitleView >
@@ -101,26 +102,27 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         
                     </Grid.RowDefinitions>
 
                     <Grid.ColumnDefinitions >
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="4*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="5*"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                         
                     </Grid.ColumnDefinitions>
 
 
-                    <Label  Grid.Column="1" VerticalOptions="Center" TextColor="White" FontSize="Large"  Text="Κατάταξη δήμου" />
-                    <Label Grid.Column="2"  Grid.RowSpan="2" VerticalOptions="Center" HorizontalTextAlignment="Center" TextColor="White" VerticalTextAlignment="Center" Text="{Binding MunicipalityStats.ranking}" FontSize="Title" />
+                    <Label  Grid.Column="1" VerticalOptions="Center" TextColor="White" FontSize="Large"  Text="{x:Static resources:Properties.Resources.MunicipalityScore}"/>
+                    <Label  Grid.Column="2"  Grid.RowSpan="3" VerticalOptions="Center" HorizontalTextAlignment="Center" TextColor="White" VerticalTextAlignment="Center" Text="{Binding MunicipalityStats.ranking}" FontSize="Title" />
+                    <Button  Grid.Column="3" Grid.RowSpan="3" x:Name="MoreBtn" BorderColor="black" BorderWidth="1" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" Margin="2"/>
+                    <Button Grid.Column="0" Grid.RowSpan="3" x:Name="ShareBtn" VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" BorderColor="Black" BorderWidth="1" Margin="2" CornerRadius="10"/>
                     
-                    <Button  Grid.Column="3" Grid.RowSpan="2" x:Name="MoreBtn" BorderColor="black" BorderWidth="1" CornerRadius="10" VerticalOptions="Center" Image="{extensions:ImageResource DestoPesto.Images.more-50.png}"  HorizontalOptions="End" Margin="2"/>
-
-                    <Button Grid.Column="0" Grid.RowSpan="2" x:Name="ShareBtn" VerticalOptions="Center" Clicked="ShareBtn_Clicked" Image="{extensions:ImageResource DestoPesto.Images.share-60.png}" BorderColor="Black" BorderWidth="1" Margin="2" CornerRadius="10"/>
+                    <Label  Grid.Column="1" Grid.Row="1" HorizontalOptions="Start" VerticalOptions="Center" TextColor="White" LineBreakMode="WordWrap" FontSize="Header"  Text="Βούλα Βάρη Βουλιαγμένη"/>
                     
-                    <Label  Grid.Column="1" Grid.Row="1" VerticalOptions="Center" TextColor="White" FontSize="Micro"  Text="Μικρότερη κατάταξη καλύτερη θέση" />
+                    <Label  Grid.Column="1" Grid.Row="2" VerticalOptions="Center" TextColor="White" FontSize="Micro"  Text="{x:Static resources:Properties.Resources.ScoreExplain}" />
 
                     
 
